--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -32,6 +32,7 @@
         padding:0;
         margin:0;
         box-sizing: border-box;
+      
       }
     </style>
   </head>
